# avogadro-cclib

./: LICENSE  README.md  cclibScript.py  plugin.json  pyproject.toml  utils.py
src/avogadro_cclib/: __init__.py  reader.py  utils.py
